fixes plus utilities added

--- a/ProductEngine/MiscUtilities/MiscUtilities.csproj
+++ b/ProductEngine/MiscUtilities/MiscUtilities.csproj
@@ -41,6 +41,7 @@
       <HintPath>..\packages\Newtonsoft.Json.10.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -51,10 +52,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AzureBlobUtils.cs" />
+    <Compile Include="JsonUtilities.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Logger\Logger.csproj">
+      <Project>{B59B462B-E0FC-4617-A2C2-420D56DA6409}</Project>
+      <Name>Logger</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
