--- a/ProductEngine/ProductBackgroundEngine/ProductBackgroundEngine.csproj
+++ b/ProductEngine/ProductBackgroundEngine/ProductBackgroundEngine.csproj
@@ -58,6 +58,14 @@
       <Project>{B59B462B-E0FC-4617-A2C2-420D56DA6409}</Project>
       <Name>Logger</Name>
     </ProjectReference>
+    <ProjectReference Include="..\MiscUtilities\MiscUtilities.csproj">
+      <Project>{117E7D0A-621A-4F92-9F71-74FA64144AC9}</Project>
+      <Name>MiscUtilities</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\UtilitiesModels\UtilitiesModels.csproj">
+      <Project>{12FC29D1-B1C2-46B2-8695-F1E50DA34DBB}</Project>
+      <Name>UtilitiesModels</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
