--- a/ProductEngine/ProductBackgroundEngine/ProductBackgroundEngine.csproj
+++ b/ProductEngine/ProductBackgroundEngine/ProductBackgroundEngine.csproj
@@ -66,6 +66,10 @@
       <Project>{117E7D0A-621A-4F92-9F71-74FA64144AC9}</Project>
       <Name>MiscUtilities</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SearchUtilities\SearchUtilities.csproj">
+      <Project>{1A2878BD-6975-4864-9145-A8290CF254C8}</Project>
+      <Name>SearchUtilities</Name>
+    </ProjectReference>
     <ProjectReference Include="..\UtilitiesModels\UtilitiesModels.csproj">
       <Project>{12FC29D1-B1C2-46B2-8695-F1E50DA34DBB}</Project>
       <Name>UtilitiesModels</Name>
