--- a/ProductEngine/DatabaseModels/DatabaseModels.csproj
+++ b/ProductEngine/DatabaseModels/DatabaseModels.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Retailer.cs">
       <DependentUpon>DbModelContext.tt</DependentUpon>
     </Compile>
+    <Compile Include="RetailerCrawlProductCollection.cs" />
     <Compile Include="SearchHistory.cs">
       <DependentUpon>DbModelContext.tt</DependentUpon>
     </Compile>
@@ -113,6 +114,16 @@
       <DependentUpon>DbModelContext.edmx</DependentUpon>
       <LastGenOutput>DbModelContext.cs</LastGenOutput>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Logger\Logger.csproj">
+      <Project>{B59B462B-E0FC-4617-A2C2-420D56DA6409}</Project>
+      <Name>Logger</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MiscUtilities\MiscUtilities.csproj">
+      <Project>{117E7D0A-621A-4F92-9F71-74FA64144AC9}</Project>
+      <Name>MiscUtilities</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
