--- a/ProductEngine/DatabaseModels/DatabaseModels.csproj
+++ b/ProductEngine/DatabaseModels/DatabaseModels.csproj
@@ -50,70 +50,35 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DbModelContext.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>DbModelContext.Context.tt</DependentUpon>
+    <Compile Include="DbModelContext.cs" />
+    <Compile Include="EvolutiaPretului.cs" />
+    <Compile Include="IstoricCautari.cs" />
+    <Compile Include="Migrations\201901071224110_FirstMigration.cs" />
+    <Compile Include="Migrations\201901071224110_FirstMigration.Designer.cs">
+      <DependentUpon>201901071224110_FirstMigration.cs</DependentUpon>
     </Compile>
-    <Compile Include="DbModelContext.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>DbModelContext.tt</DependentUpon>
+    <Compile Include="Migrations\201901071311555_test-migration-error-fix.cs" />
+    <Compile Include="Migrations\201901071311555_test-migration-error-fix.Designer.cs">
+      <DependentUpon>201901071311555_test-migration-error-fix.cs</DependentUpon>
     </Compile>
-    <Compile Include="DbModelContext.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>DbModelContext.edmx</DependentUpon>
+    <Compile Include="Migrations\201901071322341_added-admin-seed.cs" />
+    <Compile Include="Migrations\201901071322341_added-admin-seed.Designer.cs">
+      <DependentUpon>201901071322341_added-admin-seed.cs</DependentUpon>
     </Compile>
-    <Compile Include="Manufacturer.cs">
-      <DependentUpon>DbModelContext.tt</DependentUpon>
-    </Compile>
-    <Compile Include="PriceEvolution.cs">
-      <DependentUpon>DbModelContext.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Product.cs">
-      <DependentUpon>DbModelContext.tt</DependentUpon>
-    </Compile>
-    <Compile Include="ProductFollow.cs">
-      <DependentUpon>DbModelContext.tt</DependentUpon>
-    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Produs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Retailer.cs">
-      <DependentUpon>DbModelContext.tt</DependentUpon>
-    </Compile>
     <Compile Include="RetailerCrawlProductCollection.cs" />
-    <Compile Include="SearchHistory.cs">
-      <DependentUpon>DbModelContext.tt</DependentUpon>
-    </Compile>
-    <Compile Include="User.cs">
-      <DependentUpon>DbModelContext.tt</DependentUpon>
-    </Compile>
+    <Compile Include="UrmarireProdus.cs" />
+    <Compile Include="Utilizator.cs" />
+    <Compile Include="Vanzator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <EntityDeploy Include="DbModelContext.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>DbModelContext.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <None Include="DbModelContext.edmx.diagram">
-      <DependentUpon>DbModelContext.edmx</DependentUpon>
-    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="DbModelContext.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>DbModelContext.edmx</DependentUpon>
-      <LastGenOutput>DbModelContext.Context.cs</LastGenOutput>
-    </Content>
-    <Content Include="DbModelContext.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>DbModelContext.edmx</DependentUpon>
-      <LastGenOutput>DbModelContext.cs</LastGenOutput>
-    </Content>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Logger\Logger.csproj">
@@ -124,6 +89,17 @@
       <Project>{117E7D0A-621A-4F92-9F71-74FA64144AC9}</Project>
       <Name>MiscUtilities</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201901071224110_FirstMigration.resx">
+      <DependentUpon>201901071224110_FirstMigration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201901071311555_test-migration-error-fix.resx">
+      <DependentUpon>201901071311555_test-migration-error-fix.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201901071322341_added-admin-seed.resx">
+      <DependentUpon>201901071322341_added-admin-seed.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
