--- a/ProductEngine/Libraries/DatabaseModels.dll.config
+++ b/ProductEngine/Libraries/DatabaseModels.dll.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <connectionStrings>
-    <add name="DbModelContext" connectionString="metadata=res://*/DbModelContext.csdl|res://*/DbModelContext.ssdl|res://*/DbModelContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=prs-lic-server.database.windows.net;initial catalog=prs-lic-db;persist security info=True;user id=prs-lic-administrator;password=1qaz@WSX;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  <connectionStrings>  
+  <add name="DbModelContext" connectionString="data source=tcp:prs-lic-server.database.windows.net,1433;initial catalog=prs-lic-db;persist security info=True;user id=prs-lic-administrator;password=1qaz@WSX;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  
 </configuration>
