changes to model

--- a/ProductEngine/DatabaseModels/App.config
+++ b/ProductEngine/DatabaseModels/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>  
-  <add name="DbModelContext" connectionString="data source=tcp:prs-lic-server.database.windows.net,1433;initial catalog=prs-lic-db;persist security info=True;user id=prs-lic-administrator;password=1qaz@WSX;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  
+  <add name="DbModelContext" connectionString="data source=prs-lic-server.database.windows.net;initial catalog=prs-lic-db;persist security info=True;user id=prs-lic-administrator;password=1qaz@WSX;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
   
 </configuration>
