--- a/ProductEngine/DatabaseModels/DatabaseModels.csproj
+++ b/ProductEngine/DatabaseModels/DatabaseModels.csproj
@@ -56,6 +56,7 @@
     <Compile Include="IstoricCautari.cs" />
     <Compile Include="Produs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RetailerCrawlProductCollection.cs" />
     <Compile Include="UrmarireProdus.cs" />
     <Compile Include="Utilizator.cs" />
     <Compile Include="Vanzator.cs" />
