added changes, logics plus products, and migrations

--- a/ProductEngine/DatabaseModels/DatabaseModels.csproj
+++ b/ProductEngine/DatabaseModels/DatabaseModels.csproj
@@ -54,6 +54,11 @@
     <Compile Include="DbModelContext.cs" />
     <Compile Include="EvolutiaPretului.cs" />
     <Compile Include="IstoricCautari.cs" />
+    <Compile Include="Migrations\201901101304460_iiia.cs" />
+    <Compile Include="Migrations\201901101304460_iiia.Designer.cs">
+      <DependentUpon>201901101304460_iiia.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Produs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RetailerCrawlProductCollection.cs" />
@@ -77,6 +82,11 @@
       <Project>{117E7D0A-621A-4F92-9F71-74FA64144AC9}</Project>
       <Name>MiscUtilities</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201901101304460_iiia.resx">
+      <DependentUpon>201901101304460_iiia.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
