--- a/MvcMusicStore/MvcMusicStore/MvcMusicStore.csproj
+++ b/MvcMusicStore/MvcMusicStore/MvcMusicStore.csproj
@@ -107,7 +107,6 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
-    <Content Include="Content\CustomCSS.css" />
     <Content Include="Content\Site.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -142,6 +141,9 @@
     <Compile Include="Controllers\MyProductsController.cs" />
     <Compile Include="Controllers\ProductSearchController.cs" />
     <Compile Include="Utilities\AzureUtilities\QueueUtilities.cs" />
+    <Compile Include="Utilities\DatabaseUtilities\AparitieProdus.cs">
+      <DependentUpon>DbModelContext.tt</DependentUpon>
+    </Compile>
     <Compile Include="Utilities\DatabaseUtilities\DbModelContext.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -191,6 +193,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\ProductSearch\SearchProduct.cshtml" />
+    <Content Include="Views\Login\LoginHome.cshtml" />
     <EntityDeploy Include="Utilities\DatabaseUtilities\DbModelContext.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>DbModelContext.Designer.cs</LastGenOutput>
@@ -198,7 +201,6 @@
     <Content Include="Utilities\DatabaseUtilities\DbModelContext.edmx.diagram">
       <DependentUpon>DbModelContext.edmx</DependentUpon>
     </Content>
-    <Content Include="Views\Login\LoginHome.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
