--- a/MvcMusicStore/MvcMusicStore/packages.config
+++ b/MvcMusicStore/MvcMusicStore/packages.config
@@ -11,5 +11,6 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
   <package id="Modernizr" version="2.6.2" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net451" />
+  <package id="SimpleCrypto" version="0.3.30.26" targetFramework="net451" />
   <package id="WindowsAzure.Storage" version="9.3.3" targetFramework="net451" />
 </packages>
