--- a/ProductEngine/MiscUtilities/packages.config
+++ b/ProductEngine/MiscUtilities/packages.config
@@ -3,5 +3,6 @@
   <package id="HtmlAgilityPack" version="1.8.0" targetFramework="net451" />
   <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net451" />
+  <package id="SimpleCrypto" version="0.3.30.26" targetFramework="net451" />
   <package id="WindowsAzure.Storage" version="9.3.1" targetFramework="net451" />
 </packages>
