--- a/MvcMusicStore/MvcMusicStore/Web.config
+++ b/MvcMusicStore/MvcMusicStore/Web.config
@@ -57,8 +57,11 @@
 
     <system.web>
       <authentication mode="Forms">
-        <forms path="/" loginUrl="~/User/Login" protection="All" timeout="30" />
+        <forms path="/" loginUrl="~/User/Login" protection="All" timeout="30" slidingExpiration="true"  />
       </authentication>
+      <authorization>
+        <deny users="?"/>
+      </authorization>
     </system.web>
 
 </configuration>
