--- a/ProductEngine/AllertCheckUtilities/AllertCheckUtilities.csproj
+++ b/ProductEngine/AllertCheckUtilities/AllertCheckUtilities.csproj
@@ -4,17 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B457EDEC-88B4-46CE-82CC-5345CFDE7577}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>ProductBackgroundEngine</RootNamespace>
-    <AssemblyName>ProductBackgroundEngine</AssemblyName>
+    <ProjectGuid>{07614B58-5E4D-4C43-A9F7-109A9CECC628}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>AllertCheckUtilities</RootNamespace>
+    <AssemblyName>AllertCheckUtilities</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,7 +23,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -33,6 +31,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -43,40 +42,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="AllertCheckUtils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\AllertCheckUtilities\AllertCheckUtilities.csproj">
-      <Project>{07614B58-5E4D-4C43-A9F7-109A9CECC628}</Project>
-      <Name>AllertCheckUtilities</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\CrawlingUtilities\CrawlingUtilities.csproj">
-      <Project>{22CE7430-0B2D-4C27-82A4-EE8DDBB269E1}</Project>
-      <Name>CrawlingUtilities</Name>
-    </ProjectReference>
     <ProjectReference Include="..\DatabaseModels\DatabaseModels.csproj">
       <Project>{010D9C41-5B64-4861-B909-E42855976E9E}</Project>
       <Name>DatabaseModels</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Logger\Logger.csproj">
-      <Project>{B59B462B-E0FC-4617-A2C2-420D56DA6409}</Project>
-      <Name>Logger</Name>
-    </ProjectReference>
     <ProjectReference Include="..\MiscUtilities\MiscUtilities.csproj">
       <Project>{117E7D0A-621A-4F92-9F71-74FA64144AC9}</Project>
       <Name>MiscUtilities</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SearchUtilities\SearchUtilities.csproj">
-      <Project>{1A2878BD-6975-4864-9145-A8290CF254C8}</Project>
-      <Name>SearchUtilities</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\UtilitiesModels\UtilitiesModels.csproj">
-      <Project>{12FC29D1-B1C2-46B2-8695-F1E50DA34DBB}</Project>
-      <Name>UtilitiesModels</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
