--- a/ProductEngine/MiscUtilities/MiscUtilities.csproj
+++ b/ProductEngine/MiscUtilities/MiscUtilities.csproj
@@ -60,6 +60,7 @@
     <Compile Include="AzureBlobUtils.cs" />
     <Compile Include="AzureQueueUtils.cs" />
     <Compile Include="CrawlSettingsHelper.cs" />
+    <Compile Include="EmailHelper.cs" />
     <Compile Include="HtmlDocumentUtilities.cs" />
     <Compile Include="HttpUtils.cs" />
     <Compile Include="JsonUtilities.cs" />
