--- a/ProductEngine/Libraries/DatabaseModels.dll.config
+++ b/ProductEngine/Libraries/DatabaseModels.dll.config
@@ -4,4 +4,4 @@
   
   <add name="DbModelContext" connectionString="data source=prs-lic-server.database.windows.net;initial catalog=prs-lic-db;persist security info=True;user id=prs-lic-administrator;password=1qaz@WSX;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
   
-</configuration>
+</configuration>E:\PrsLic\ProductEngine\DatabaseModels\App.config
