--- a/ProductEngine/DatabaseModels/DatabaseModels.csproj
+++ b/ProductEngine/DatabaseModels/DatabaseModels.csproj
@@ -73,6 +73,10 @@
     <Compile Include="Migrations\201901162134299_changed-price-from-string-to-decima.Designer.cs">
       <DependentUpon>201901162134299_changed-price-from-string-to-decima.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201901171553511_notification-utilities-isNotifiedFlag-dateNotification.cs" />
+    <Compile Include="Migrations\201901171553511_notification-utilities-isNotifiedFlag-dateNotification.Designer.cs">
+      <DependentUpon>201901171553511_notification-utilities-isNotifiedFlag-dateNotification.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Produs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -110,6 +114,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201901162134299_changed-price-from-string-to-decima.resx">
       <DependentUpon>201901162134299_changed-price-from-string-to-decima.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201901171553511_notification-utilities-isNotifiedFlag-dateNotification.resx">
+      <DependentUpon>201901171553511_notification-utilities-isNotifiedFlag-dateNotification.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
